--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,13 @@
     --border-footer-color: #d3d4d3;
     --text-link-color: #50535a;
     --text-color-menu: #707070;
+    --white-color: #ffff;
+    --border-radius: 20px;
+    --telefonica-bold: Telefonica-Bold;
+    --telefonica-regular: Telefonica-Regular;
+    --telefonica-light: Telefonica-Light;
 }
+
 
 /* ****** fonts ******* */
 @font-face {
@@ -28,18 +34,255 @@
 
 /* ***** */
 
-.uno{
-    font-family: Telefonica-Bold;
+
+
+/* ****** Resets ******* */ 
+
+body{
+    margin: 0;
+    overflow-x: hidden;
 }
 
-.dos
+h1
 {
-    font-family: Telefonica-Regular;
+    margin: 0;
 }
 
-.tres
+h2
 {
-    font-family: Telefonica-Light;
+    margin: 0;
+}
+
+h3
+{
+    margin: 0;
+}
+
+h4
+{
+    margin: 0;
+}
+
+p
+{
+    margin: 0;
+}
+/* ***** */
+
+/* ****** Styles site ******* */ 
+
+/* ** Hero ** */
+.hero
+{
+    position: relative;
+}
+
+.hero-message-container
+{
+    position: absolute;
+    right: -50%;
+    width: 200%;
+    height: 290px;
+    background-color: var(--white-color);
+    border-bottom-left-radius: 100%;
+    border-bottom-right-radius: 100%;
+    z-index: -1;
+}
+
+.hero-message
+{
+    text-align: center;
+    width: 85%;
+    margin: 0 auto;
+}
+
+.logo
+{
+    width: 90px;
+    padding-top: 26px;
+}
+
+.hero-message-title
+{
+    margin-top: 28px;
+    margin-bottom: 22px;
+    font-size: 1.6rem;
+    font-family: var(--telefonica-light);
+    color: var(--text-color);
+    font-weight: lighter;
+}
+
+.hero-message-content
+{
+    font-size: .8rem;
+    color: var(--text-color);
+    font-family: var(--telefonica-regular);
+}
+
+.hero-message-button
+{
+    margin-top: 32px;
+    background-color: var(--main-color);
+    border: none;
+    width: 170px;
+    border-radius: var(--border-radius);
+    font-size: .9rem;
+    padding: 10px;
+}
+
+.hero-message-button a
+{
+    text-decoration: none;
+    color: var(--white-color);
+    padding: 10px 35px;
+}
+
+.hero-image-container{
+    width: 100%;
+    height: 318px;
+    overflow: hidden;
+    position: relative;
+    background: red;
+    z-index: -3;
 }
 
 
+.hero-image{
+    width: 560px;
+    position: absolute;
+    object-fit: cover;
+    bottom: 0;
+    right: 0;
+}
+
+.hero-link 
+{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 10px 15px;
+    font-family: var(--telefonica-regular);
+    font-size: 0.7rem;
+    color: var(--text-link-color);
+}
+
+@media screen and (min-width: 560px) {
+    .hero-image-container
+    {
+        overflow: none;
+    }
+
+    .hero-image
+    {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 640px)
+{
+    .hero-message-container
+    {
+        display: none;
+    }
+
+    .hero
+    {
+        display: flex;
+        background-color: transparent;
+    }
+
+    .hero-message
+    {
+        position: absolute;
+        width: 35%;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+    .hero-image-container
+    {
+        overflow: none;
+        position: static;
+    }
+
+    .hero-image
+    {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 768px)
+{
+    .hero-image-container
+    {
+        height: 100vh;
+    }
+
+    .hero-message
+    {
+        padding-left: 30px;
+        width: 30%;
+    }
+
+    .logo
+    {
+        margin-top: 60px;
+    }
+
+    .hero-message-title
+    {
+        margin-top: 50px;
+    }
+
+    .hero-message-button
+    {
+        margin-top: 50px;
+    }
+}
+
+@media screen and (min-width: 1024px)
+{
+    .hero-message
+    {
+        width: 30%;
+        padding-left: 60px;
+    }
+
+}
+
+@media screen and (min-width: 1200px)
+{
+    .hero-message
+    {
+        width: 40%;
+    }
+
+    .logo
+    {
+        width: 160px;
+    }
+
+    .hero-message-title
+    {
+        font-size: 3rem;
+    }
+
+    .hero-message-content
+    {
+        font-size: 1.2rem;
+        width: 70%;
+    }
+
+    .hero-message-button
+    {
+        font-size: 1.2rem;
+        width: 240px;
+    }
+
+    .hero-link
+    {
+        padding: 40px 40px;
+        font-size: 1rem;
+    }
+}
