--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     --telefonica-bold: Telefonica-Bold;
     --telefonica-regular: Telefonica-Regular;
     --telefonica-light: Telefonica-Light;
+    --underline-color: #a13ea1;
 }
 
 
@@ -82,7 +83,6 @@ p
 .hero-message-container
 {
     position: absolute;
-    
     top: 0;
     width: 100%;
     height: 290px;
@@ -552,6 +552,127 @@ p
 /* *** */
 
 
+/* ** Terms_condition ** */
+    .terms_condition_body
+    {
+        padding: 26px 16px 16px 16px;
+        background-color: var(--section-gray-color);
+    }
+
+    .terms_condition_link_logo
+    {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
+
+    .terms_condition_logo
+    {
+        width: 90px;
+        
+    }
+
+    .terms_condition_nav
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .terms_condition_title
+    {
+        font-family: var(--telefonica-bold);
+        font-size: .9rem;
+        padding-bottom: 8px;
+        color:var(--text-color-menu);
+    }
+
+    .terms_condition_link 
+    {
+        font-family: var(--telefonica-regular);
+        font-size: .7rem;
+        margin-bottom: 2px;
+        padding-bottom: 4px;
+        text-decoration: none;
+        color: var(--text-color);
+        
+    }
+
+    .terms_condition_link:hover
+    {
+        color: var(--main-color);
+        text-decoration-line: underline;
+        text-decoration-color: var(--underline-color);
+        text-underline-position: under;
+        
+    }
+
+    @media screen and (min-width: 768px) {
+        .terms_condition_header
+        {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .terms_condition_link_logo
+        {
+            width: 30%;
+        }
+
+        .terms_condition_nav
+        {
+            flex-direction: row;
+            width: 80%;
+            justify-content: space-between;
+            align-items: flex-end;
+            text-align: center;
+        }
+
+        .terms_condition_link_logo
+        {
+            padding: 0;
+            justify-content: flex-start;
+        }
+
+        .terms_condition_link
+        {
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
+
+        .terms_condition_title
+        {
+            padding-bottom: 0;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+        .terms_condition_body
+        {
+            padding: 46px 60px;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+
+        .terms_condition_title
+        {
+            font-size: 1.2rem;
+        }
+        
+        .terms_condition_link
+        {
+            font-size: 1rem;
+        }
+        
+        .terms_condition_logo
+        {
+            width: 165px;
+        }
+    }
+    
+
+/* *** */
 
 /* ****** Utilities ******* */
 
