--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,14 @@ p
         height: 330px;
     }
 }
+
+@media screen and (min-width: 360px) {
+    .hero-message-container
+    {
+        height: 340px;
+    }
+}
+
 @media screen and (min-width: 560px) {
     .hero-image-container
     {
