add content politica_cobranza.html

--- a/styles.css
+++ b/styles.css
@@ -833,7 +833,7 @@ p
 
         .terms_condition_content_list_item
         {
-            font-size: 1remLi;
+            font-size: 1rem;
         }
     }
     
