--- a/styles.css
+++ b/styles.css
@@ -334,6 +334,11 @@ p
         height: 100%;
         top: 0;
     }
+
+    .hero-link
+    {
+        bottom: 0;
+    }
 }
 
 @media screen and (min-width: 768px)
